# soundstoic

./: .gitignore  Cargo.toml  README.md
resources/: Info.plist
src/: audio_manager.rs  audio_sys.rs  autostart.rs  config.rs  controller.rs  device_watcher.rs  main.rs  tray_ui.rs  ui_notifier.rs
