[package]
name = "soundstoic"
version = "0.1.0"
edition = "2021"
description = "macOS menu bar agent that locks the default input device using Core Audio HAL listeners"
license = "MIT"
repository = "https://github.com/Eastonn/soundstoic"
readme = "README.md"

[dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-app-kit = { version = "0.3", default-features = false, features = [
  "NSApplication",
  "NSCell",
  "NSImage",
  "NSMenu",
  "NSMenuItem",
  "NSResponder",
  "NSRunningApplication",
  "NSStatusBar",
  "NSStatusItem",
  "objc2-core-foundation",
] }
core-foundation = "0.10"
crossbeam-channel = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
